--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "storybook": "ng run blu:storybook",
-    "build-storybook": "ng run blu:build-storybook"
+    "build-storybook": "ng run blu:build-storybook",
+    "chromatic": "npx chromatic --project-token=chpt_77aa2e04503ee34"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +21,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -38,6 +40,7 @@
     "@storybook/testing-library": "^0.2.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
+    "chromatic": "^6.20.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -50,5 +53,7 @@
     "storybook": "^7.1.1",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.3"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "blu@0.0.0"
 }
