--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "test": "ng test",
     "storybook": "ng run blu:storybook",
     "build-storybook": "ng run blu:build-storybook",
-    "chromatic": "npx chromatic --project-token=chpt_77aa2e04503ee34"
+    "chromatic": "npx chromatic --project-token=chpt_77aa2e04503ee34",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.1.6",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.6",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "material-symbols": "^0.10.2",
     "primeicons": "^6.0.1",
     "primeng": "^16.0.2",
     "rxjs": "~7.8.0",
@@ -29,6 +33,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-eslint/builder": "16.1.0",
+    "@angular-eslint/eslint-plugin": "16.1.0",
+    "@angular-eslint/eslint-plugin-template": "16.1.0",
+    "@angular-eslint/schematics": "16.1.0",
+    "@angular-eslint/template-parser": "16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@compodoc/compodoc": "^1.1.21",
@@ -40,8 +49,11 @@
     "@storybook/blocks": "^7.1.1",
     "@storybook/testing-library": "^0.2.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "autoprefixer": "^10.4.14",
     "chromatic": "^6.20.0",
+    "eslint": "^8.44.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
